# rsign2

./: .gitignore  CLA.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  Torgap-made-easy.md
.github/workflows/: ci.yml
CLA-signed/: CLA.gorazdko.41F0EA1699A74C1E2FA41B538CF96BC3FF9DBBCE.asc  CLA.henkvancann.BB59C0E48A9D75BDA4DC9CD2428218FF30BC7338.asc
docs/: MANUAL.md
