[package]
name = "rsign2"
version = "0.6.1"
authors = [
    "Frank Denis <github@pureftpd.org>",
    "Daniel Rangel <daniel@rangel.in>",
]
description = "A command-line tool to sign files and verify signatures."
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "cryptography"]
keywords = ["command-line", "sign", "publickey", "cryptography", "minisign"]
repository = "https://github.com/jedisct1/rsign2"

[dependencies]
base64 = "0.13"
clap = { version = "4.0.10", features = ["std", "cargo", "wrap_help"] }
minisign = "0.7"

[target.'cfg(any(windows, unix))'.dependencies]
dirs = "4.0"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
