[package]
name = "rsign2"
version = "0.6.4"
authors = [
    "Frank Denis <github@pureftpd.org>",
    "Daniel Rangel <daniel@rangel.in>",
]
description = "A command-line tool to sign files and verify signatures."
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "cryptography"]
keywords = ["command-line", "sign", "publickey", "cryptography", "minisign"]
repository = "https://github.com/jedisct1/rsign2"

[dependencies]
clap = { version = "4", features = ["std", "cargo", "wrap_help", "string"] }
minisign = "0.7.8"

[target.'cfg(any(windows, unix))'.dependencies]
dirs = "5.0.1"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
